package sample;

import vue.NavigateurDesVues;

import java.util.List;

public class App {

    public static void main(String[] parametres) {

        NavigateurDesVues.launch(NavigateurDesVues.class, parametres);


    }


}
